volume/case/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training
  labels:
    app: training
    tier: backend
spec:
  replicas: 1
  template:
    metadata:
      name: training
      labels:
        app: training
        tier: backend
    spec:
      containers:
        - name: training
          image: rgx69/training:v2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "20000m"
              memory: "4000Mi"
  selector:
    matchLabels:
      app: training
      tier: backend
