volume/case/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: training
    labels:
        app: training
        tier: backend
spec:
    selector:
        app: training
        tier: backend
    ports:
        - port: 8080
          protocol: TCP
          targetPort: 8080
    type: LoadBalancer
