volume/case/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx-controller
spec:
    ingressClassName: nginx
    rules:
        - host: training-devops.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: training
                            port:
                                number: 8080
